Da terminare : - gestione email - gestione reso